<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#000000"
    tools:context="com.hfad.wordgag.SecondActivity">

    <ImageView
        android:id="@+id/image"
        android:contentDescription="@string/image"
        android:layout_centerHorizontal="true"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/phrase"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/image"
        android:textSize="20sp" />

    <com.hfad.wordgag.TypeWriter
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        android:layout_marginTop="20dp"
        android:textColor="#ffffff"
        android:layout_below="@+id/image"
        android:textSize="20sp" />

    <Button
        android:id="@+id/optionOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners_2"
        android:layout_marginTop="60dp"
        android:onClick="pickOne"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:visibility="gone"
        android:layout_below="@+id/image" />

    <Button
        android:id="@+id/optionTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corners_2"
        android:layout_marginTop="10dp"
        android:onClick="pickTwo"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_below="@+id/optionOne" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onReturn"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@android:color/white"
        android:text="@string/returnButton"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBack"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@android:color/white"
        android:text="@string/backButton"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onNext"
        android:background="@drawable/button_rounded_corners"
        android:textColor="@android:color/white"
        android:text="@string/nextButton"
        android:layout_alignParentBottom="true" />
</RelativeLayout>